--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="already_have_an_account">Already Have An Account?</string>
     <string name="register_succeed">Register Succeed</string>
     <string name="continue_login">Continue Login</string>
+    <string name="tombol_berbahaya">Tombol Berbahaya</string>
 </resources>
